# retina

./: .gitignore  LICENSE  README.md  user_manual.md
.github/workflows/: build-desktop.yml
apps/api/: pyproject.toml  run_server.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260318_0001_initial_schema.py  20260318_0002_image_thumbnails.py  20260318_0003_legacy_session_tracking.py  20260318_0004_audit_events.py
apps/api/app/: audit.py  backup.py  config.py  constants.py  database.py  integrity.py  legacy_import.py  main.py  maintenance.py  migrations.py  models.py  schemas.py  storage.py  version.py
apps/api/scripts/: backup_data.py  build_sidecar.py  import_legacy.py  scan_integrity.py
apps/api/tests/: test_app.py
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/scripts/: build-backend-sidecar.mjs
apps/desktop/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  styles.css  tauri.ts  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
docs/: architecture.md  distribution.md  domain-model.md  implementation-plan.md  install.md  installer-testing.md  legacy-assessment.md  macos-signing.md  migration-plan.md
scripts/: sync-version.mjs
