[package]
name = "retina-desktop"
version = "0.1.0"
description = "Tauri shell for the Retina desktop app"
authors = ["John Gargalionis"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0" }

[dependencies]
tauri = { version = "2.0.0" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
