[package]
name = "retina-desktop"
version = "0.1.9"
description = "Tauri shell for the Retina desktop app"
authors = ["John Gargalionis"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.0.0", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
